assest folder refactored

--- a/src/app/about_list/about/about.html
+++ b/src/app/about_list/about/about.html
@@ -1,3 +1,80 @@
 <div class="container flex-column">
+    <!-- <h1 class="contentTitle">Overview </h1> -->
+    <div class=" flex-row flex-column-S ">
+        <div class="col-md-6 col-sm-12">
+            <p>
+                The Starex University, Gurugram, has been conceptualized under the provisions of the
+                Haryana Private Universities (Amendment) Act 2016. The high-tech Millennium City -
+                Gurugram is a milestone in the world of progress and growth. Starex University is set up
+                on the Peri-Urban Suburbs of Gurugram.
+                <br><br>
+                Having a nice ambience of greenery, immaculate lawns, and a beautiful, well-maintained
+                campus, it is sprawling in approximately 35 acres on a vast lush green stretch on Delhi
+                - Jaipur Highway, NH-48. The meticulously developed impressive infrastructure of the
+                University in Gurgaon, Haryana, equipped with all modern amenities, playgrounds,
+                sporting facilities and world-class environment, predicts the fervour and passion of its
+                faculty and team towards the distinction in every sphere of education that it strives to
+                achieve.
+                <br><br>
+                The Starex University Derive to be an epitome of luminosity and excellence. It would
+                impart the best of education to its students and prepare them to deal with the
+                challenges of the professional world with zeal, high spirits, and optimism. Through
+                world-class facilities and the most talented, dedicated, motivating &amp; expert
+                faculty, the university is committed to the betterment of its students. Also, it works
+                to continuously inspire and drive the students to newer heights in learning and
+                scholarship.
 
+            </p>
+        </div>
+        <div class="col-md-6 col-sm-12 text-center left-img-sec">
+            <img class="about-head-img" src="../../../assets/chancellor_starex1.jpg" alt="">
+            <p class="mb-0 abouttext"> Sh. Mohinder Singh (Chancellor) </p>
+        </div>
+    </div>
+    <div class=" flex-row flex-column-S ">
+        <div class="col-md-6 col-sm-12 text-center left-img-sec">
+            <img class="vision-mission-img"  src="../../../assets/vision-mission1.jpg" alt="">
+        </div>
+        <div class="col-md-6 col-sm-12">
+            <h3 class="contentTitle text-center">VISION</h3>
+            <ul>
+                <li>To convert our motto ‘Nunc Est Semper: Now is Forever’ for spreading the light of
+                    education with youth empowerment forever as street SMART (simple, moral,
+                    action-oriented, responsive and transparent) global citizens.
+                </li>
+
+            </ul>
+        </div>
+
+    </div>
+    <div class=" flex-row flex-column-S ">
+        <div class="col-md-6 col-sm-12">
+            <h3 class="contentTitle border-0">MISSION</h3>
+            <ul class="a">
+                <li>To impart quality education with the conducive, multi-disciplinary, vibrant and
+                    inspirational environment for academic excellence with needed communication skills
+                    and spiritual input for becoming street SMART and SIMPLE</li>
+
+            </ul>
+        </div>
+<div class="col-md-6 col-sm-12 text-center left-img-sec">
+            <img class="vision-mission-img" src="../../../assets/vision-mission.png" alt="">
+        </div>
+    </div>
+    <div class=" flex-row flex-column-S ">
+        <div class="col-md-6 col-sm-12 text-center left-img-sec">
+            <img class="vision-mission-img" src="../../../assets/unity.jpg" alt="">
+        </div>
+        <div class="col-md-6 col-sm-12">
+            <h3 class="contentTitle text-center">VALUES</h3>
+            <ul>
+                <li> Discipline</li>
+                <li> Eco friendly</li>
+                <li>Synergy through team work </li>
+                <li>Passion for excellence</li>
+                <li>Trust and transparency</li>
+            </ul>
+        </div>
+        
+    </div>
 </div>
