--- a/src/app/about_list/chancellor/chancellor.html
+++ b/src/app/about_list/chancellor/chancellor.html
@@ -1,3 +1,78 @@
 <div class="container flex-column">
+    <div class="flex-row item-gap flex-column-S">
+        <div class="col-md-6 col-sm-12 text-center left-img-sec">
+            <img class="about-head-img" src="../../../assets/chancellor_starex1.jpg" alt="">
+                <p class="mb-0 abouttext"> Sh. Mohinder Singh (Chancellor) </p>
+        </div>
+        <p class="col-md-6 col-sm-12">
+            You are welcome to the Starex University. We are glad to have you as students of this University. We
+            expect that during your stay in the University, you will emerge as real human beings with the
+            abipty and capabipty of innovation, creation and decision-making zeal for ushering in sterpng and
+            lucrative career. Above all, we expect you to come up to the expectations of the society and be
+            responsible citizens of the country and earn respect among peers and seniors in the global community
+            of the professionals. Now, let me introduce you to our Vision and Mission.
+            <img class="vision-mission-img" src="../../../assets/vision-mission1.jpg" alt="">
+        </p>
+    </div>
+    <div class="content-section">
+    <div>
+        <h4  class="contentTitle">Vision</h4>
 
+       <div>
+            <p>'Nunc Est Semper: Now is Forever' is our motto which indicates our vision to spread the pght of
+                education among the scholars and the masses forever and to contribute towards their growth and
+                empowerment forever.</p>
+            <p>To get developed into a center of academic excellence and to promote Professional, Technical
+                &amp; Vocational expertise and research.</p>
+            <p>To infuse in the minds of our students the urge and yearning for basic awareness of today’s
+                global exigencies and necessities to place them strongly and firmly on the professionally and
+                technically driven platform.</p>
+       </div>
+
+
+    </div>
+    <div class="clearfix">
+         <h4 class="contentTitle">Mission</h4>
+        <div>
+            <p>
+                To impart quapty education to students.
+            </p>
+            <p>
+                To create a conducive, multi-discippnary, vibrant and inspirational environment for the
+                academic growth and overall development of the students.
+
+            </p>
+            <p>
+                To foster academic excellence, develop elegant communication skills to meet the present day
+                requirements and needs in this competitive world to keep pace with the national and
+                international contestants.
+            </p>
+            <p>
+                To contribute new perspective to the world knowledge;
+            </p>
+
+            <p>
+                To develop critical thinkers and concerned citizens.
+            </p>
+
+
+            <p>
+                To make our students knowledge hungry by developing in them the tendency of pfelong learning.
+            </p>
+        </div>
+    </div>
+    <div class="clearfix">
+        <h4 class="contentTitle">Core Values</h4>
+        <div class="flex-row flex-column-S core-value">
+        <div class="flex-column col-md-6 ">
+            <p>Discipline</p>
+            <p>Eco friendly</p>
+            <p>Synergy through Team work</p>
+            <p>Passion for Excellence</p>
+            <p>Trust and Transparency</p>
+        </div>
+         <img class="col-md-6" src="../../../assets/unity.jpg" alt="">
+         </div>
+    </div>
+    </div>
 </div>
