--- a/src/app/about_list/coe/coe.html
+++ b/src/app/about_list/coe/coe.html
@@ -1,3 +1,45 @@
 <div class="container flex-column">
+    <h1 class="contentTitle text-center"> CONTROLLER OF EXAMINATION</h1>
+    <div class="flex-row flex-column-S">
+        <div class="col-md-6 col-sm-12 text-center">
+           <img class="about-head-img" src="../../../assets/registrar.jpg" alt="">
+            <div>
+                <p class="mb-0 abouttext"> Mr. N.P. Singh
+                </p>
+                <span class="aboutdesignation">COE, Starex University.</span>
+            </div>
+        </div>
+        <div class="col-md-6 col-sm-12">
+            <p class="abouttext" style="text-align:justify;font-weight: 100;">
 
+                Mr. N.P. Singh assumed the charge of Controller of Examination of Starex University, Gurugram on 1st
+                August, 2023. Prior joining to the University, he was serving as Controller of Examination at Shri
+                Lal Bahadur Shastri National Sanskrit University (A Central University), New Delhi.
+
+
+                <br>
+
+                Mr. Singh previously served at Indira Gandhi National Open University, New Delhi as Registrar,
+                Student Evaluation. In addition, he has also carried out the responsibilities of Community College
+                Unit and Defense Unit. With an extensive career spanning over more than 35 years at IGNOU and
+                SLBSNSU, he has made the valuable contribution in the field of Administration, Establishment,
+                Finance and Accounts, Student Support Services, Vigilance, Conduct of Examination and Evaluation in
+                the Universities.
+                <br>
+
+                Besides above, Mr. Singh has also handled the matters related to conduct of the entrance test for
+                admission in various academic programmes of the University. He has deep experience of organizing,
+                conducting the examinations and evaluation of answer scripts for lakhs of students for more than 15
+                years. He has also served at various Regional Centers and handled and monitored the activities of
+                the Study Centers fallen within their jurisdiction.
+                <br>
+
+                Mr. Singh has also associated with various Universities/Institutions as a member of Board of
+                Management, Finance Committee, Academic Council, Planning and Monitoring Board, Examination
+                Committee, Selection Committee, Departmental Promotion Committee, Recruitment and Promotion Rules
+                framing Committee and Ordinance and Regulation framing Committee etc.
+            </p>
+        </div>
+
+    </div>
 </div>
