--- a/src/app/about_list/disclosure/disclosure.html
+++ b/src/app/about_list/disclosure/disclosure.html
@@ -1,3 +1,48 @@
 <div class="container flex-column">
+<section class="content about py50">
+        <div class="container">
+            <div class="row">
 
+                <div class="col-md-8 order-md-2">
+                     
+                    <div class="row"> 
+                     
+                     <div class="col-sm-12 p-3 ">
+                        <ul class="" style="    font-size: large;
+">
+                            <li><a target="_blank" href="https://www.starexuniversity.com/university-act">University Act</a></li>
+                            <li><a target="_blank" href="https://www.starexuniversity.com/university-act">Statue</a></li>
+                            <li><a target="_blank" href="https://www.starexuniversity.com/first_ordinance">First Ordinance</a></li>
+                        </ul> 
+                     </div>
+                     
+                </div>
+                     
+                </div>
+                <div class="col-md-4 order-md-1">
+                <div class="row p-0 m-0">
+                    
+                    <div class="col-12 p-0 m-0">
+                        <ul class="leftnav">
+                    <li><a href="https://www.starexuniversity.com/about">About Us</a></li>
+                    <!-- <li><a href="https://www.starexuniversity.com/governance">Governance</a></li> -->
+               
+                    <li><a href="https://www.starexuniversity.com/chancellor-message">Chancellor Message</a></li>
+                    <li><a href="https://www.starexuniversity.com/vice-chancellor-message">Vice Chancellor Message</a></li>
+                
+                    <li><a href="https://www.starexuniversity.com/recognition-approval">Recognition &amp; Approvals</a></li>
+                    <li><a href="https://www.starexuniversity.com/mandatory-disclosure">Mandatory Disclosure</a></li>
+                    <!-- <li><a href="#">Fee Structure</a></li> -->
+                    <li><a href="https://www.starexuniversity.com/app-assets/vendors/assets/pdf/information_for_ugc_inspection.pdf">Information for UGC</a></li>
+                    <!-- <li><a href="https://www.starexuniversity.com/grievance-redressal">Grievance Redressal</a></li> -->
+                </ul>
+                    </div>
+                </div>
+
+                
+            </div>
+
+            </div>
+        </div>
+    </section>
 </div>
