--- a/src/app/about_list/mou/mou.html
+++ b/src/app/about_list/mou/mou.html
@@ -1,3 +1,244 @@
 <div class="container flex-column">
+<section class="content about py50">
+        <div class="container">
+            <div class="row">
+                 
 
+                <div class="col-md-8 order-md-2">
+                       
+    <!--                <div class="row">-->
+    <!--                 <div class="col-sm-6 p-3 text-center">-->
+    <!--                    <img class="border-dark border governingAuthorityImg" src="https://www.starexuniversity.com/assets/images/chancellorg.jpg" alt="">-->
+    <!--                    <h4>Mohinder Singh</h4>-->
+    <!--                    <p>Chancellor</p>-->
+    <!--                 </div>-->
+    <!--                 <div class="col-sm-6 p-3 text-center">-->
+    <!--                    <img class="border-dark border governingAuthorityImg" src="https://www.starexuniversity.com/assets/vice-chancler.jpg" alt="">-->
+    <!--                    <h4>Prof. (Dr.) M.M.Goel</h4>-->
+    <!--                    <p> Vice Chancellor <br>vc@starexuniversity.com</p>-->
+    <!--                 </div>-->
+    <!--                 <div class="col-sm-6 p-3 text-center">-->
+    <!--                    <img class="border-dark border" src="https://www.starexuniversity.com/assets/drslvasishta.jpg" alt="" style='height: 264px;-->
+    <!--width: 67%;-->
+    <!--margin-bottom: 10px;'>-->
+    <!--                    <h4>Dr. S.L. Vasishta</h4>-->
+    <!--                    <p>Registrar <br> registrar@starexuniversity.com</p>-->
+    <!--                 </div>-->
+    <!--                 <div class="col-sm-6 p-3 text-center">-->
+    <!--                    <img class="border-dark border governingAuthorityImg" src="https://www.starexuniversity.com/assets/anuradha.jpg" alt="">-->
+    <!--                    <h4>Ms. Anuradha Chabbra</h4>-->
+    <!--                    <p>COE <br> coe@starexuniversity.com</p>-->
+    <!--                 </div>-->
+                     
+    <!--            </div>-->
+                
+                    <div class="row">
+                    
+      <div class="col-md-12 order-md-2">
+        <!--<h3 class="contentTitle">Graduation         -->
+        <!--<small>(27 Courses)</small>-->
+      <!--</h3>-->
+        <div class="row">
+          <div class="col-sm-12">
+            <div class="row">
+                                      <div class="col-sm-12 mt-3">
+                          
+
+                            <!--<div class="card schoolcard"  >-->
+                 <!--<div class="card-header">-->
+                 <!-- <h4>-->
+                 <!--   Physical Sciences -->
+
+                 <!--    <small>(2 Courses)</small>-->
+                 <!--   <span class="pull-right">-->
+                    <!--      <i class="fa fa-caret-down"></i>-->
+                    <!--    </span>-->
+                 <!-- </h4>-->
+                 <!--</div>-->
+                <div class="card-body">
+                    <div class="card mt-3 programcard">
+                      <div class="card-header">
+                        <h6>
+                        Star Hospital<span class="pull-right">
+                          <i class="fa fa-caret-down"></i>
+                        </span>
+                        </h6>
+
+                      </div>
+                      <div class="card-body" style="display: none;">
+                        <div class="row">
+                        <div class="col-12">
+                        </div>
+                      </div>
+                      <div class="row">
+                            <div class="col-12">
+                                 <div class="textbox py30" style="border-bottom: 1px dashed #fff;">
+                                  <a class="btn rounded-0" target="_blank" href="https://www.starexuniversity.com/app-assets/vendors/assets/star.pdf
+"><span> <i class="fa fa fa-file-pdf-o"></i></span> MOU Sign With Star Hospital,Bhiwadi,Haryana</a> 
+                                    </div>
+                              <!-- <a class="rounded-0 btn courseBtn" href="https://www.starexuniversity.com/subCourse/BSc-Programme-Non-Medical"  >  View More Details</a> -->
+                            </div>
+                          </div>
+                    </div>
+                    </div>
+                      <div class="card mt-3 programcard">
+                      <div class="card-header active">
+                        <h6>
+                     Silver Streak Multi Speciality Hospital  <span class="pull-right">
+                          <i class="fa fa-caret-up"></i>
+                        </span>
+                        </h6>
+
+                      </div>
+                      <div class="card-body" style="display: none;">
+                        <div class="row">
+                        <div class="col-12">
+                        </div>
+                      </div>
+                      <div class="row">
+                            <div class="col-12">
+                                 <div class="textbox py30" style="border-bottom: 1px dashed #fff;">
+                                  <a class="btn rounded-0" target="_blank" href="https://www.starexuniversity.com/app-assets/vendors/assets/silver.pdf"><span> <i class="fa fa fa-file-pdf-o"></i></span>  MOU Sign With Silver Streak Multi Speciality Hospital,Gurugram</a> 
+                                    </div>
+                              <!-- <a class="rounded-0 btn courseBtn" href="https://www.starexuniversity.com/subCourse/BSc-Programme-Non-Medical"  >  View More Details</a> -->
+                            </div>
+                          </div>
+                    </div>
+                    </div>
+                    
+                    
+                    
+                      <div class="card mt-3 programcard">
+                      <div class="card-header active">
+                        <h6>
+                      Canwinn Aarogya Dham <span class="pull-right">
+                          <i class="fa fa-caret-up"></i>
+                        </span>
+                        </h6>
+
+                      </div>
+                      <div class="card-body" style="display: none;">
+                        <div class="row">
+                        <div class="col-12">
+                        </div>
+                      </div>
+                      <div class="row">
+                            <div class="col-12">
+                                 <div class="textbox py30" style="border-bottom: 1px dashed #fff;">
+                                  <a class="btn rounded-0" target="_blank" href="https://www.starexuniversity.com/app-assets/vendors/assets/canwinn.pdf"><span> <i class="fa fa fa-file-pdf-o"></i></span>MOU Sign With Canwinn Aarogya Dham</a> 
+                                    </div>
+                              <!-- <a class="rounded-0 btn courseBtn" href="https://www.starexuniversity.com/subCourse/BSc-Programme-Non-Medical"  >  View More Details</a> -->
+                            </div>
+                          </div>
+                    </div>
+                    </div>
+                    
+                    
+                  
+         
+                        
+                      <div class="card mt-3 programcard">
+                      <div class="card-header">
+                        <h6>
+                     International College of Hotel Management<span class="pull-right">
+                          <i class="fa fa-caret-down"></i>
+                        </span>
+                        </h6>
+
+                      </div>
+                      <div class="card-body" style="display: none;">
+                        <div class="row">
+                        <div class="col-12">
+                        </div>
+                      </div>
+                      <div class="row">
+                            <div class="col-12">
+                                 <div class="textbox py30" style="border-bottom: 1px dashed #fff;">
+                                  <a class="btn rounded-0" target="_blank" href="https://www.starexuniversity.com/app-assets/vendors/assets/ichm.mou.pdf
+"><span> <i class="fa fa fa-file-pdf-o"></i></span>MOU Sign With ICHM</a> 
+                                    </div>
+                              <!-- <a class="rounded-0 btn courseBtn" href="https://www.starexuniversity.com/subCourse/BSc-Programme-Non-Medical"  >  View More Details</a> -->
+                            </div>
+                          </div>
+                    </div>
+                    </div>
+                    
+                    
+                  
+         
+                  
+                  
+                  
+                    
+                  
+                  
+                    
+                    
+                    
+                    
+                    
+                    
+                    
+                    
+                    
+                  
+                    
+                    
+                    
+                    
+                    
+                    
+                    
+                    
+                    
+                    
+                    
+                    
+                    
+                    
+                    
+                    
+                    
+                  
+                </div>
+              <!--</div>-->
+                        </div>
+
+                          
+             </div>
+             
+          </div>
+           
+        </div>
+      </div>
+        
+                     
+                    </div>
+                </div>
+                <div class="col-md-4 order-md-1">
+                <div class="row p-0 m-0">
+                    
+                    <div class="col-12 p-0 m-0">
+                        <ul class="leftnav">
+                    <li><a href="https://www.starexuniversity.com/about">About Us</a></li>
+                    <li><a href="https://www.starexuniversity.com/governance">Governance</a></li>
+                   
+                    <li><a href="https://www.starexuniversity.com/chancellor-message">Chancellor Message</a></li>
+                    <li><a href="https://www.starexuniversity.com/vice-chancellor-message">Vice Chancellor Message</a></li>
+                   
+                    <li><a href="https://www.starexuniversity.com/recognition-approval">Recognition &amp; Approvals</a></li>
+                    <li><a href="https://www.starexuniversity.com/mandatory-disclosure">Mandatory Disclosure</a></li>
+                    <!-- <li><a href="#">Fee Structure</a></li> -->
+                    <li><a href="https://www.starexuniversity.com/assets/pdf/information_for_ugc_inspection.pdf">Information for UGC</a></li>
+                    <!-- <li><a href="https://www.starexuniversity.com/grievance-redressal">Grievance Redressal</a></li> -->
+                </ul>
+                    </div>
+                </div>
+
+                
+            </div>
+
+            </div>
+        </div>
+    </section>
 </div>
