--- a/src/app/about_list/recognisation/recognisation.html
+++ b/src/app/about_list/recognisation/recognisation.html
@@ -1,3 +1,161 @@
 <div class="container flex-column">
+<section class="content about py50">
+        <div class="container">
+            <div class="row">
 
+                <div class="col-md-8 order-md-2">
+                 
+                    <div class="row">
+                    <div class="col-sm-12">
+                        
+                              <div class="textbox py30">
+                                 <img src="https://www.starexuniversity.com/app-assets/vendors/assets/govth.png" alt="" style="height: auto;
+    width: 98px;
+    float: left;
+    margin-right:28px;">
+                            <h4 class="title">Government Of Haryana</h4>
+                            <p class="description">Starex University has been established under the provisions of Haryana Private Universities (Amendment) Act 2006. Established by Haryana Government Act No. 20 of 2016, notified
+                        on Aug. 25, 2016.</p>
+                          <a class="btn rounded-0" target="_blank" href="https://www.starexuniversity.com/app-assets/vendors/assets/pdf/haryana.pdf"><span> <i class="fa fa fa-file-pdf-o"></i></span> Established by Haryana Government Act No. 20 of 2016</a> 
+                        </div>
+                             
+                  
+                        <div class="textbox py30">
+                            <img src="https://www.starexuniversity.com/app-assets/vendors/assets/ugc.logo_.jpg" alt="" style="    height: auto;
+    width: 133px;
+    float: left;
+    margin-right: 10px;
+">
+                            <h4 class="title">University Grant Commision</h4>
+                            <p class="description">Starex University is admitted by the University Grants Commission (UGC) vide their letter
+No. F. 8-4/2017 (CPP-I/PU) dt: 6th Feb. 2023 by including the name in the list mentioned
+(Serial No. 91) on its website.</p>
+                          <a class="btn rounded-0" target="_blank" href="https://www.starexuniversity.com/app-assets/vendors/assets/ugc_approval_2023.pdf"><span> <i class="fa fa fa-file-pdf-o"></i></span> Letter No. F. 8-4/2017</a> 
+                        </div>
+                          <div class="textbox py30">
+                                <img src="https://www.starexuniversity.com/app-assets/vendors/assets/bci.png" alt="" style="height: 100px;
+    width: 100px;
+    float: left;
+    margin-right: 35px;
+    position: relative;
+    left: 9px;">
+                            <h4 class="title">Bar Council of india</h4>
+                            <p class="description">The starex university has been granted permission from BCI.</p><br>
+                          <a class="btn rounded-0" target="_blank" href="https://www.starexuniversity.com/app-assets/vendors/assets/pdf/2025/2025_about_recognition_approval.pdf"><span> <i class="fa fa fa-file-pdf-o"></i></span> Granted permission from BCI.</a> 
+                        </div>
+                        
+                        
+                   
+                        <div class="textbox py30">
+                                <img src="https://www.starexuniversity.com/app-assets/vendors/assets/pci.jpg" alt="" style="height: auto;
+    width: 143px;margin-right: 10px;
+    float: left;">
+                            <h4 class="title">PCI Recognition</h4>
+                            <p class="description">The starex university has been granted permission from PCI under letter
+F.No.02.288/2018-PCI Dated. 16th March2018.</p>
+                          <a class="btn rounded-0" target="_blank" href="https://www.starexuniversity.com/app-assets/vendors/assets/pci-approval.pdf
+"><span> <i class="fa fa fa-file-pdf-o"></i></span> PCI under letter F.No.02.288/2018-PCI
+</a> 
+                        </div>
+                        
+                        
+                        
+                        
+                              <div class="textbox py30">
+                                <img src="https://www.starexuniversity.com/app-assets/vendors/assets/iic.webp" alt="" style="height: auto;
+    width: 143px;margin-right: 10px;
+    float: left;">
+                            <h4 class="title">Institution's Innovation Council Recognition</h4>
+                            <p class="description">Starex University Established with Institution's Innovation Council Recognition</p>
+                          <a class="btn rounded-0" target="_blank" href="https://www.starexuniversity.com/app-assets/vendors/assets/iic-approval.pdf
+"><span> <i class="fa fa fa-file-pdf-o"></i></span>&nbsp;&nbsp;Recognization Certificate 
+</a> 
+                        </div>
+                        
+                        
+                        
+                        
+                        
+                         <div class="textbox py30">
+                                <img src="https://www.starexuniversity.com/app-assets/vendors/assets/nirf-removebg-preview.png
+" alt="" style="height: auto;
+    width: 143px;margin-right: 10px;
+    float: left;">
+                            <h4 class="title">NIRF Registration</h4>
+                            <p class="description">Starex University Approved By NIRF</p>
+                          <a class="btn rounded-0" target="_blank" href="https://www.starexuniversity.com/app-assets/vendors/assets/nirf.jpeg
+"><span> <i class="fa fa fa-file-pdf-o"></i></span>&nbsp;&nbsp;Starex University Approved By NIRF
+</a> 
+                        </div>
+                        
+                        
+                        
+                        
+                        
+                                <div class="textbox py30">
+                                 <img src="https://www.starexuniversity.com/app-assets/vendors/assets/federal-removebg-preview.png" alt="" style="height: auto;
+    width: 98px;
+    float: left;
+    margin-right:28px;">
+                            <h4 class="title">FEDERAL MINISTRY OF EDUCATION, NIGERIA</h4>
+                            <p class="description">Comfirmation Of Starex University (India) As Registered
+And Recognized University In Nigeria</p>
+                          <a class="btn rounded-0" target="_blank" href="https://www.starexuniversity.com/app-assets/vendors/assets/approval-april.pdf
+"><span> <i class="fa fa fa-file-pdf-o"></i></span>Federal Ministry Of Education Evaluation And Accreditation Division </a> 
+                        </div>
+                             
+                        
+                        
+                        
+                      
+  <div class="textbox py30">
+          <img src="https://www.starexuniversity.com/app-assets/vendors/assets/association.png" alt="" style="    height: 100px;
+    width: 100px;
+    float: left;
+    margin-right: 46px;
+    position: relative;
+    left: 9px;">
+                            <h4 style="position: relative;
+    " class="title">Association of Indian Universities (AIU)</h4>
+                            <p style="position: relative;
+   " class="description">Starex University is a member of Association of Indian Universities since Nov.03,2019 vide letter no. F1.1/SG/AIU/2019/M00628</p>
+                         
+                        </div>
+                        
+                        
+                        
+                        
+                        
+                        
+                        
+                    </div>
+                </div>
+                     
+                </div>
+                <div class="col-md-4 order-md-1">
+                    <div class="row mx-md-4">
+
+                        <div class="col-12">
+                            <ul class="leftnav">
+                    <li><a href="https://www.starexuniversity.com/about">About Us</a></li>
+                    <!-- <li><a href="https://www.starexuniversity.com/governance">Governance</a></li> -->
+                  
+                    <li><a href="https://www.starexuniversity.com/chancellor-message">Chancellor Message</a></li>
+                    <li><a href="https://www.starexuniversity.com/vice-chancellor-message">Vice Chancellor Message</a></li>
+                  
+                    <li><a href="https://www.starexuniversity.com/recognition-approval">Recognition &amp; Approvals</a></li>
+                    <li><a href="https://www.starexuniversity.com/mandatory-disclosure">Mandatory Disclosure</a></li>
+                    <!-- <li><a href="#">Fee Structure</a></li> -->
+                    <li><a href="https://www.starexuniversity.com/app-assets/vendors/assets/pdf/information_for_ugc_inspection.pdf">Information for UGC</a></li>
+                    <!-- <li><a href="https://www.starexuniversity.com/grievance-redressal">Grievance Redressal</a></li> -->
+                </ul>
+                        </div>
+                    </div>
+
+                    
+                </div>
+
+            </div>
+        </div>
+    </section>
 </div>
