--- a/src/app/about_list/vchancellor/vchancellor.html
+++ b/src/app/about_list/vchancellor/vchancellor.html
@@ -1,3 +1,38 @@
 <div class="container flex-column">
+        <h1 class="contentTitle text-center"> MESSAGE FROM THE DESK OF VICE CHANCELLOR</h1>
+        <div class="flex-row flex-column-S">
+            <div class="col-md-6 col-sm-12">
+                 <img class="about-head-img" src="../../../assets/vc1.jpg" alt="">
+                <h5 class="text-center">Prof.Dr. Madhu Parhar (Vice Chancellor)<br>Starex University, Gurugram, Haryana</h5>
+                </div>
+                <div class="col-md-6 col-sm-12">
+                    <p class="abouttext" style="text-align:justify;">
 
+                        Dear Students, we heartily welcome you to Starex University, Gurugram.
+
+                        As a responsible citizen, we hold firm expectations for the utmost ethical standards
+                        in conduct of Academic &amp; Research compliance with all federal regulatory
+                        requirements, state laws and University policies. These standards are fostered
+                        through education, assessment and quality improvement. We set high standards for an
+                        environment rooted in honesty and respect for others by Teaching &amp; Non-teaching
+                        staff member of Starex University.
+                        <br><br>
+                        At Starex, Exceptional research relies on diverse and complementary ideas. Across
+                        all institutional boundaries we promote team building creativity, and facilitates
+                        multidisciplinary, diverse teams to advance innovative and collaborative science.
+                        <br><br>
+                        We work to improve gender, race, ethnic and cultural representation in our Academic
+                        &amp; Research workforce at Starex University. Diverse voices is not only the right
+                        thing to do, but it strengthens our Academic &amp; Research capability and ensures
+                        focus on the topics and communities necessary to expand the benefits of Academic
+                        &amp; Research to everyone.
+                        <br><br>
+                        <strong>Wishing you&nbsp;all&nbsp;the&nbsp;best.</strong>
+
+                    </p>
+                </div>
+                
+
+            
+        </div>
 </div>
