--- a/src/app/header/header.html
+++ b/src/app/header/header.html
@@ -1,8 +1,8 @@
 <mat-toolbar color="primary" class="header_s2">
-    <img (click)="navigateToHome()" src="assets/Logo.png" alt="Logo" class="logo" />
+    <img (click)="navigateToHome()" src="assets/logo/Logo.png" alt="Logo" class="logo" />
 
     <span class="spacer"></span>
-    <button class="blink-button">Click Me</button>
+    <!-- <button class="blink-button">Click Me</button> -->
     <div class="erp-login">
         <!-- <mat-icon>fingerprint</mat-icon> -->
         <a> ERP LOGIN </a>
@@ -17,46 +17,46 @@
             <mat-tab label="About Starex">
                 <ul class="dropmenu">
                     <li>
-                        <a routerLink="law" (click)="handleAnchorClick()">About Us</a>
+                        <a routerLink="about-starex" (click)="handleAnchorClick()">About Us</a>
                     </li>
                     <li>
-                        <a routerLink="law" (click)="handleAnchorClick()">Chancellor's Message</a>
+                        <a routerLink="chancellor-message" (click)="handleAnchorClick()">Chancellor's Message</a>
                     </li>
                     <li>
-                        <a routerLink="law" (click)="handleAnchorClick()">Vice Chancellor's Message</a>
+                        <a routerLink="vc-message" (click)="handleAnchorClick()">Vice Chancellor's Message</a>
                     </li>
                     <li>
-                        <a routerLink="law" (click)="handleAnchorClick()">Registrar Message</a>
+                        <a routerLink="registrar-message" (click)="handleAnchorClick()">Registrar Message</a>
                     </li>
                     <li>
-                        <a routerLink="law" (click)="handleAnchorClick()">OSD Message</a>
+                        <a routerLink="osd-message" (click)="handleAnchorClick()">OSD Message</a>
                     </li>
                     <li>
-                        <a routerLink="law" (click)="handleAnchorClick()">COE</a>
+                        <a routerLink="coe" (click)="handleAnchorClick()">COE</a>
                     </li>
                     <li>
-                        <a routerLink="law" (click)="handleAnchorClick()">Recognition &amp; Approval</a>
+                        <a routerLink="approval-recognition" (click)="handleAnchorClick()">Recognition &amp; Approval</a>
                     </li>
                     <li>
-                        <a routerLink="law" (click)="handleAnchorClick()">Mandatory Disclosure</a>
+                        <a routerLink="disclosure" (click)="handleAnchorClick()">Mandatory Disclosure</a>
                     </li>
                     <li>
-                        <a routerLink="law" (click)="handleAnchorClick()">Starex MOU's</a>
+                        <a routerLink="starex-mou" (click)="handleAnchorClick()">Starex MOU's</a>
                     </li>
                     <li>
-                        <a routerLink="law" (click)="handleAnchorClick()">Information for UGC Inspection</a>
+                        <a routerLink="ugc-inspection" (click)="handleAnchorClick()">Information for UGC Inspection</a>
                     </li>
                     <li>
-                        <a routerLink="law" (click)="handleAnchorClick()">Annual Reports</a>
+                        <a routerLink="annual-reports" (click)="handleAnchorClick()">Annual Reports</a>
                     </li>
                     <li>
-                        <a routerLink="law" (click)="handleAnchorClick()">Ombudsperson</a>
+                        <a routerLink="ombudsperson" (click)="handleAnchorClick()">Ombudsperson</a>
                     </li>
                     <li>
-                        <a routerLink="law" (click)="handleAnchorClick()">Policies</a>
+                        <a routerLink="policies" (click)="handleAnchorClick()">Policies</a>
                     </li>
                     <li>
-                        <a routerLink="law" (click)="handleAnchorClick()">Organogram</a>
+                        <a routerLink="organogram" (click)="handleAnchorClick()">Organogram</a>
                     </li>
                 </ul>
             </mat-tab>
@@ -77,7 +77,7 @@
                         <a routerLink="agriculture" (click)="handleAnchorClick()">Agriculture Science</a>
                     </li>
                     <li>
-                        <a routerLink="commerce" (click)="handleAnchorClick()">Commerce &amp; Management</a>
+                        <a routerLink="commerce&management" (click)="handleAnchorClick()">Commerce &amp; Management</a>
                     </li>
                     <li>
                         <a routerLink="physical-science" (click)="handleAnchorClick()">Physical Sciences</a>
