--- a/src/app/home-content/home.html
+++ b/src/app/home-content/home.html
@@ -1,23 +1,23 @@
 <div class="home">
   <mat-card class="video-wrapper">
     <video src="https://www.starexuniversity.com/app-assets/vendors/assets/video/virtual tour.mp4" autoplay
-      [muted]="'muted'" playsinline  loop></video>
+      [muted]="'muted'" playsinline loop></video>
   </mat-card>
 
   <div class="flex-column photo_section">
     <div class="flex-row flex-column-S item-gap">
-      <div class="col-md-3 statBox">
+      <div class="col-md-3 col-sm-12 statBox">
         <img class="img_section" src="../../assets/aug/1a.jpg" alt="Tranding">
-         <div class="statFigure">
+        <div class="statFigure">
           <span #counterReserchDiv class="counter" data-asw-org-font-size="28" style="font-size: 28px;"
             [attr.data-count]="countReserch()">
             {{ displayReserchValue() }} +
           </span>
           <div class="sfText">Reserch & Publications</div>
         </div>
-        
+
       </div>
-      <div class="column col-md-6 item-gap">
+      <div class="column col-md-6 col-sm-12 item-gap">
         <div class="half bottom-row">
           <div class="half-child"> <img class="img_section" src="../../assets/starex_events/1-min.jpg" alt="Tranding">
           </div>
@@ -25,14 +25,14 @@
         </div>
 
         <div class="half bottom-row">
-          <div class="half-child"> <img class="img_section" src="../../assets/Sports.png" alt="Tranding"></div>
+          <div class="half-child"> <img class="img_section" src="../../assets/aug/Sports.png" alt="Tranding"></div>
           <div class="half-child"><img class="img_section" src="../../assets/starex_highlights/wifi.png"></div>
         </div>
       </div>
 
-      <div class="col-md-3 statBox">
-        <img class="img_section" src="../../assets/side.jpeg" alt="Tranding">
-      <div class="statFigure">
+      <div class="col-md-3 col-sm-12 statBox">
+        <img class="img_section" src="../../assets/aug/side.jpeg" alt="Tranding">
+        <div class="statFigure">
           <span #counterDiv class="counter" data-asw-org-font-size="28" style="font-size: 28px;"
             [attr.data-count]="countLibrary()">
             {{ displayLibraryValue() }} +
@@ -168,11 +168,12 @@
       <div class="flex-row flex-wrap justify-center item-gap  professorTable">
         <div class="animateThis slideTop in-view margin-top-1">
           <div class="dtperBox">
-            <div class="dtperImgBox"><img src="../../assets/ugc.jpg">
+            <div class="dtperImgBox"><img src="../../assets/admin-staff/chairman_image.jpg">
             </div>
             <div class="dtperContent">
-              <p data-asw-org-font-size="15" style="font-size: 15px;">Shri Mohinder singh acting person has renounced experince
-                in providing education with best qulity infrastructure and management  </p>
+              <p data-asw-org-font-size="15" style="font-size: 15px;">Shri Mohinder singh acting person has renounced
+                experince
+                in providing education with best qulity infrastructure and management </p>
             </div>
             <div class="dtperDetail">
               <h2 class="dtperName" data-asw-org-font-size="16" style="font-size: 16px;">Sh. Mohinder Singh</h2>
@@ -182,10 +183,11 @@
         </div>
         <div class="animateThis slideTop in-view margin-top-1" style="transition-delay:.1s;">
           <div class="dtperBox">
-            <div class="dtperImgBox"><img src="../../assets/ugc.jpg">
+            <div class="dtperImgBox"><img src="../../assets/admin-staff/vice-chanellor.jpg">
             </div>
             <div class="dtperContent">
-              <p data-asw-org-font-size="15" style="font-size: 15px;">Ms. Madhu Parhar, is the vice chairman and has experince
+              <p data-asw-org-font-size="15" style="font-size: 15px;">Ms. Madhu Parhar, is the vice chairman and has
+                experince
                 of more than 40 years in education field as vice chaiman.
               </p>
             </div>
@@ -197,10 +199,11 @@
         </div>
         <div class="animateThis slideTop in-view margin-top-1" style="transition-delay:.2s;">
           <div class="dtperBox">
-            <div class="dtperImgBox"><img src="../../assets/ugc.jpg">
+            <div class="dtperImgBox"><img src="../../assets/logo/ugc.jpg">
             </div>
             <div class="dtperContent">
-              <p data-asw-org-font-size="15" style="font-size: 15px;">Mr. Nakshatar Pal Singh is an Independent Director, mentor, and
+              <p data-asw-org-font-size="15" style="font-size: 15px;">Mr. Nakshatar Pal Singh is an Independent
+                Director, mentor, and
                 start-up/ scale-up ecosystem partner.
                 As a senior global executive in financial services, she excels in strategic business
                 model innovation, digital transformation, and social impact. She serves as an
@@ -217,7 +220,7 @@
 
         <div class="animateThis slideTop margin-top-2" style="transition-delay:.3s;">
           <div class="dtperBox">
-            <div class="dtperImgBox"><img src="../../assets/ugc.jpg">
+            <div class="dtperImgBox"><img src="../../assets/logo/ugc.jpg">
             </div>
             <div class="dtperContent">
               <p data-asw-org-font-size="15" style="font-size: 15px;">Dr. Anju Rani is an internationally renowned
@@ -238,7 +241,7 @@
 
         <div class="animateThis slideTop margin-top-2" style="transition-delay:.5s;">
           <div class="dtperBox">
-            <div class="dtperImgBox"><img src="../../assets/ugc.jpg">
+            <div class="dtperImgBox"><img src="../../assets/logo/ugc.jpg">
             </div>
             <div class="dtperContent">
               <a href="about/our-officers/dr-madan-mohan.html" data-asw-org-font-size="15" style="font-size: 15px;">
@@ -256,7 +259,8 @@
             </div>
             <div class="dtperDetail">
               <h2 class="dtperName" data-asw-org-font-size="16" style="font-size: 16px;">Dr. Parveen Kumari</h2>
-              <span class="dtperDesig" data-asw-org-font-size="11" style="font-size: 11px;">Principal PHARMACEUTICAL</span>
+              <span class="dtperDesig" data-asw-org-font-size="11" style="font-size: 11px;">Principal
+                PHARMACEUTICAL</span>
             </div>
           </div>
         </div>
@@ -264,14 +268,170 @@
     </div>
 
   </section>
+  <div class="flex-row flex-column-S item-gap">
+  <div class="flex-column-S col-md-6 col-sm-12">
+    <h2 class="text-center h2-blue margin-top-2">Main Highlights</h2>
+     <swiper-container class="highlights-swipper"
+     
+  slides-per-view="1"
+  loop="true"
+  autoplay="true"
+ autoplay-delay="0"
+  autoplay-disable-on-interaction="false"
+  speed="8000"  >
+      <div class="swiper-slide highlights-slides">
+        <img class="events-img"
+          src="https://www.starexuniversity.com/uploads/StarexHighlights/Discussion_with_international_students_.jpg"
+          alt="">
+
+        <a href="https://www.starexuniversity.com/highlights/Discussion-with-international-students">
+          <h6 class="text-dark">Discussion with international students</h6>
+        </a>
+      </div>
+      <div class="swiper-slide highlights-slides"><img class="events-img"
+          src="https://www.starexuniversity.com/uploads/StarexHighlights/Chemistry_Lab.jpg" alt="">
+
+        <a href="https://www.starexuniversity.com/highlights/Chemistry-Lab-in-Action">
+          <h6 class="text-dark">Chemistry Lab in Action</h6>
+        </a>
+      </div>
+      <div class="swiper-slide highlights-slides">
+        <img class="events-img" src="https://www.starexuniversity.com/uploads/StarexHighlights/CAFETERIA.jpg" alt="">
+
+        <a href="https://www.starexuniversity.com/highlights/Starex-Cafeteria">
+          <h6 class="text-dark">Starex Cafeteria</h6>
+        </a>
+      </div>
+
+
+      <div class="swiper-slide highlights-slides">
+        <img class="events-img" src="https://www.starexuniversity.com/uploads/StarexHighlights/canteen_.jpg" alt="">
+
+        <a href="https://www.starexuniversity.com/highlights/Starex-Canteen">
+          <h6 class="text-dark">Starex Canteen</h6>
+        </a>
+      </div>
+      <div class="swiper-slide highlights-slides">
+        <img class="events-img" src="https://www.starexuniversity.com/uploads/StarexHighlights/Library_.jpg" alt="">
+
+        <a href="https://www.starexuniversity.com/highlights/Starex-Library">
+          <h6 class="text-dark">Starex Library</h6>
+        </a>
+      </div>
+      <div class="swiper-slide highlights-slides">
+        <img class="events-img" src="https://www.starexuniversity.com/uploads/StarexHighlights/3a.jpg
+" alt="">
+
+        <a href="https://www.starexuniversity.com/highlights/Lush-Green-Campus">
+          <h6 class="text-dark">Lush Green Campus</h6>
+        </a>
+      </div>
+      <div class="swiper-slide highlights-slides">
+        <img class="events-img" src="https://www.starexuniversity.com/uploads/StarexHighlights/wifi.png" alt="">
+
+        <a href="https://www.starexuniversity.com/highlights/247-Wifi-Enabled-Campus">
+          <h6 class="text-dark">24*7 Wifi Enabled Campus</h6>
+        </a>
+      </div>
+      <div class="swiper-slide highlights-slides">
+        <img class="events-img" src="https://www.starexuniversity.com/uploads/StarexHighlights/modern.JPG" alt="">
+
+        <a href="https://www.starexuniversity.com/highlights/Well-Connected-to-DelhiNCR">
+          <h6 class="text-dark">Modern Hostels</h6>
+        </a>
+      </div>
+      <div class="swiper-slide highlights-slides">
+        <img class="events-img" src="https://www.starexuniversity.com/uploads/StarexHighlights/why1.jpg" alt="">
+
+        <a href="https://www.starexuniversity.com/highlights/Highly-Qualified-Experienced-Faculty">
+          <h6 class="text-dark">Highly Qualified &amp; Experienced Faculty</h6>
+        </a>
+      </div>
+    </swiper-container>
+  </div>
+  <div class="latest-events col-md-6 col-sm-12">
+    <h2 class="text-center h2-blue margin-top-2">Latest happenings / Events</h2>
+    <swiper-container effect="coverflow" loop="true" autoplay-disable-on-interaction="false" autoplay-delay="0" speed="6000"
+       slides-per-view="2" centered-slides="true" space-between="10"
+      wait-for-transition="false"  class="crcLogoSwiper">
+      <div class="swiper-slide">
+        <img class="events-img"
+          src="https://www.starexuniversity.com/uploads/StarexHighlights/Discussion_with_international_students_.jpg"
+          alt="">
+
+        <a href="https://www.starexuniversity.com/highlights/Discussion-with-international-students">
+          <h6 class="text-dark">Discussion with international students</h6>
+        </a>
+      </div>
+      <div class="swiper-slide"><img class="events-img"
+          src="https://www.starexuniversity.com/uploads/StarexHighlights/Chemistry_Lab.jpg" alt="">
+
+        <a href="https://www.starexuniversity.com/highlights/Chemistry-Lab-in-Action">
+          <h6 class="text-dark">Chemistry Lab in Action</h6>
+        </a>
+      </div>
+      <div class="swiper-slide">
+        <img class="events-img" src="https://www.starexuniversity.com/uploads/StarexHighlights/CAFETERIA.jpg" alt="">
+
+        <a href="https://www.starexuniversity.com/highlights/Starex-Cafeteria">
+          <h6 class="text-dark">Starex Cafeteria</h6>
+        </a>
+      </div>
+
+
+      <div class="swiper-slide">
+        <img class="events-img" src="https://www.starexuniversity.com/uploads/StarexHighlights/canteen_.jpg" alt="">
+
+        <a href="https://www.starexuniversity.com/highlights/Starex-Canteen">
+          <h6 class="text-dark">Starex Canteen</h6>
+        </a>
+      </div>
+      <div class="swiper-slide">
+        <img class="events-img" src="https://www.starexuniversity.com/uploads/StarexHighlights/Library_.jpg" alt="">
+
+        <a href="https://www.starexuniversity.com/highlights/Starex-Library">
+          <h6 class="text-dark">Starex Library</h6>
+        </a>
+      </div>
+      <div class="swiper-slide">
+        <img class="events-img" src="https://www.starexuniversity.com/uploads/StarexHighlights/3a.jpg
+" alt="">
+
+        <a href="https://www.starexuniversity.com/highlights/Lush-Green-Campus">
+          <h6 class="text-dark">Lush Green Campus</h6>
+        </a>
+      </div>
+      <div class="swiper-slide">
+        <img class="events-img" src="https://www.starexuniversity.com/uploads/StarexHighlights/wifi.png" alt="">
+
+        <a href="https://www.starexuniversity.com/highlights/247-Wifi-Enabled-Campus">
+          <h6 class="text-dark">24*7 Wifi Enabled Campus</h6>
+        </a>
+      </div>
+      <div class="swiper-slide">
+        <img class="events-img" src="https://www.starexuniversity.com/uploads/StarexHighlights/modern.JPG" alt="">
+
+        <a href="https://www.starexuniversity.com/highlights/Well-Connected-to-DelhiNCR">
+          <h6 class="text-dark">Modern Hostels</h6>
+        </a>
+      </div>
+      <div class="swiper-slide">
+        <img class="events-img" src="https://www.starexuniversity.com/uploads/StarexHighlights/why1.jpg" alt="">
+
+        <a href="https://www.starexuniversity.com/highlights/Highly-Qualified-Experienced-Faculty">
+          <h6 class="text-dark">Highly Qualified &amp; Experienced Faculty</h6>
+        </a>
+      </div>
+    </swiper-container>
+  </div>
+  </div>
   <section class=" flex-column govt-section">
-    <h2 class="text-center h2-blue margin-top-2" style="background-color: #f9f9f9;">Important Links</h2>
+    <h2 class="text-center h2-blue margin-top-2">Important Links</h2>
     <div class="flex-row flex-column-S flex-wrap item-gap">
-      <div class="col-md-2  text-center govt-img-container">
+      <div class="col-md-2 col-sm-12  text-center govt-img-container">
         <div class="icon-holder">
-          <a href="https://www.education.gov.in/" target="_blank"> <img
-              src="../../assets/minstryEducation.png" class="govt_img" alt=""
-              style="    height: 126px;"></a>
+          <a href="https://www.education.gov.in/" target="_blank"> <img src="../../assets/logo/minstryEducation.png"
+              class="govt_img" alt="" style="    height: 126px;"></a>
         </div>
 
         <div class="legacyTitle">
@@ -284,10 +444,10 @@
         </div>
 
       </div>
-      <div class="col-md-2  text-center govt-img-container">
+      <div class="col-md-2 col-sm-12 text-center govt-img-container">
         <div class="icon-holder">
-          <a href="https://schooleducationharyana.gov.in/" target="_blank"> <img
-              src="../../assets/Govt_of_Haryana.webp" class="govt_img" alt=""></a>
+          <a href="https://schooleducationharyana.gov.in/" target="_blank"> <img src="../../assets/logo/Govt_of_Haryana.webp"
+              class="govt_img" alt=""></a>
         </div>
         <div class="legacyTitle">
           <a href="https://schooleducationharyana.gov.in/" target="_blank">
@@ -299,10 +459,9 @@
         </div>
 
       </div>
-      <div class="col-md-2  text-center govt-img-container">
+      <div class="col-md-2 col-sm-12 text-center govt-img-container">
         <div class="icon-holder">
-          <a href="https://www.ugc.gov.in/" target="_blank"> <img
-              src="../../assets/ugc.jpg" class="govt_img" alt=""
+          <a href="https://www.ugc.gov.in/" target="_blank"> <img src="../../assets/logo/ugc.jpg" class="govt_img" alt=""
               style="    height: 130px;"></a>
         </div>
         <div class="legacyTitle">
@@ -315,10 +474,10 @@
         </div>
 
       </div>
-      <div class="col-md-2  text-center govt-img-container">
+      <div class="col-md-2 col-sm-12 text-center govt-img-container">
         <div class="icon-holder">
-          <a href="https://www.aiu.ac.in/" target="_blank"> <img
-              src="../../assets/aiu-new.jpg" class="govt_img" alt=""></a>
+          <a href="https://www.aiu.ac.in/" target="_blank"> <img src="../../assets/logo/aiu-new.jpg" class="govt_img"
+              alt=""></a>
         </div>
         <div class="legacyTitle">
           <a href="https://www.aiu.ac.in/" target="_blank">
@@ -332,10 +491,10 @@
 
 
       </div>
-      <div class="col-md-2  text-center govt-img-container">
+      <div class="col-md-2 col-sm-12 text-center govt-img-container">
         <div class="icon-holder">
           <a href="https://www.starexuniversity.com/assets/nep_2020.pdf" target="_blank"> <img class="govt_img"
-              src="../../assets/ministry-HRD.jpg" alt=""></a>
+              src="../../assets/logo/ministry-HRD.jpg" alt=""></a>
         </div>
         <div class="legacyTitle">
           <a href="https://www.starexuniversity.com/assets/nep_2020.pdf" target="_blank">
