--- a/src/app/about_list/about/about.scss
+++ b/src/app/about_list/about/about.scss
@@ -1,6 +1,3 @@
-table {
-  width: 100%;
-}
 a{
      color: #284fa7;
 }
@@ -13,43 +10,19 @@ p{
 }
 .container{
     margin:0 1rem;
-    img{
-      width:100%;
-      height: 100%;
-    }
+   
 }
-.col-md-4{
-  width:33%;
-}
-.contentTitle{
-    text-transform: uppercase;
-    color: #284fa7;
-    border-bottom: 1px dashed #284fa7;
-    padding-bottom: 10px;
-    font-weight: 700;
-}
-/* sketch-flex.component.css */
-.flex-column {
-  display: flex;
-  flex-direction: column;
-}
-.flex-row {
-  display: flex;
-  flex-direction: row;
-}
-.flex_L50{
-  width:50%
-}
-/* Small devices (phones, ≥576px) */
-@media (max-width: 768px) {
-  .flex-column-S {
-    flex-direction: column;
-  }
-.flex_S100{
-  width:100%
-}
-.col-md-4{
-  width:100%;
-}
+.about-head-img {
+  margin-top: 1rem;
+  height: 75vh;
+  width: 80%;
+  border: 1px solid blanchedalmond;
+  border-radius: 10px;
+  padding: 1rem 1rem 2rem 1rem;
+ 
 }
 
+.vision-mission-img{
+  width: 100%;
+  height: 100%;
+}
