--- a/src/app/about_list/chancellor/chancellor.scss
+++ b/src/app/about_list/chancellor/chancellor.scss
@@ -1,55 +1,56 @@
-table {
+.content-section{
+width:90%;
+align-self: center;
+}
+.about-head-img {
+  margin-top: 1rem;
+  height: 75vh;
+  width: 80%;
+  border: 1px solid blanchedalmond;
+  border-radius: 10px;
+  padding: 1rem 1rem 2rem 1rem;
+}
+.vision-mission-img{
   width: 100%;
+  height: 14rem;
 }
-a{
-     color: #284fa7;
-}
-p{
-  line-height: 1.8;
-    font-size: 18px;
-    color: #3C3D3E;
-    letter-spacing: .2px;
-    font-family: Lato, sans-serif;
-}
-.container{
-    margin:0 1rem;
-    img{
-      width:100%;
-      height: 100%;
-    }
-}
-.col-md-4{
-  width:33%;
-}
-.contentTitle{
-    text-transform: uppercase;
-    color: #284fa7;
-    border-bottom: 1px dashed #284fa7;
-    padding-bottom: 10px;
-    font-weight: 700;
-}
-/* sketch-flex.component.css */
-.flex-column {
-  display: flex;
-  flex-direction: column;
-}
-.flex-row {
-  display: flex;
-  flex-direction: row;
-}
-.flex_L50{
-  width:50%
-}
-/* Small devices (phones, ≥576px) */
-@media (max-width: 768px) {
-  .flex-column-S {
-    flex-direction: column;
+.left-img-sec{
+  position: relative;
+ p{
+    position: absolute;
+    bottom: 1rem;
+    transform: translateX(50%);
+    margin: .75rem;
+   line-height: 1;
   }
-.flex_S100{
-  width:100%
-}
-.col-md-4{
-  width:100%;
-}
 }
 
+a {
+  color: #284fa7;
+}
+
+p {
+  line-height: 1.8;
+  font-size: 18px;
+  color: #3C3D3E;
+  letter-spacing: .2px;
+  font-family: Lato, sans-serif;
+}
+
+.contentTitle {
+  text-transform: uppercase;
+  color: #284fa7;
+  border-bottom: 1px dashed #284fa7;
+  padding-bottom: 10px;
+  font-weight: 700;
+}
+.core-value{
+  p{
+    margin: 0.8rem;
+    line-height: 1;
+  }
+  img{
+    height: 12rem;
+    margin-bottom: 1rem;
+  }
+}
