--- a/src/app/about_list/coe/coe.scss
+++ b/src/app/about_list/coe/coe.scss
@@ -1,55 +1,9 @@
-table {
-  width: 100%;
-}
+
 a{
      color: #284fa7;
 }
-p{
-  line-height: 1.8;
-    font-size: 18px;
-    color: #3C3D3E;
-    letter-spacing: .2px;
-    font-family: Lato, sans-serif;
-}
-.container{
-    margin:0 1rem;
-    img{
-      width:100%;
-      height: 100%;
-    }
-}
-.col-md-4{
-  width:33%;
-}
-.contentTitle{
-    text-transform: uppercase;
-    color: #284fa7;
-    border-bottom: 1px dashed #284fa7;
-    padding-bottom: 10px;
-    font-weight: 700;
-}
-/* sketch-flex.component.css */
-.flex-column {
-  display: flex;
-  flex-direction: column;
-}
-.flex-row {
-  display: flex;
-  flex-direction: row;
-}
-.flex_L50{
-  width:50%
-}
-/* Small devices (phones, ≥576px) */
-@media (max-width: 768px) {
-  .flex-column-S {
-    flex-direction: column;
-  }
-.flex_S100{
-  width:100%
-}
-.col-md-4{
-  width:100%;
-}
-}
 
+.about-head-img{
+  width:80%;
+  height: 70vh;
+}
