--- a/src/app/footer/footer.scss
+++ b/src/app/footer/footer.scss
@@ -3,7 +3,13 @@
     max-width: 100%;
      background-color: #1f396e;
     color: #fff;
-
+ li::before {
+    content: "";
+    font-family: fontawesome;
+    color: var(--theme-color2);
+    left: -20px;
+    position: absolute;
+}
     a {
         display: inline-block;
         text-decoration: none;
@@ -12,7 +18,7 @@
         perspective: 1000px;
         /* Enables 3D effect */
         min-height: 2rem;
-        width: 100%;
+        //width: 100%;
         color: #e3eef4
     }
 
